[package]
name = "coin"
version = "0.1.0"
edition = "2021"

[lib]
name = "coin"
path = "src/lib.rs"

[[bin]]
name = "coin-node"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
bincode = "1.3"
clap = { version = "=4.5.20", features = ["derive"] }
ethnum = { version = "1.5.3", features = ["serde"] }
hex = "0.4"
k256 = { version = "=0.13.3", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls"] }
rocksdb = { version = "0.23.0", default-features = false, features = ["bindgen-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
toml = "=0.8.23"
tower-http = { version = "0.5", features = ["cors"] }
hashbrown = "=0.15.5"
indexmap = "=2.7.1"
idna_adapter = "=1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
